fix for bad facebook wrapping
git-svn-id: https://source.sakaiproject.org/www/trunk@366 a679bb99-f00c-0410-8349-afe10950bba1

--- a/Private/html/facebook/include/template_facebook.css
+++ b/Private/html/facebook/include/template_facebook.css
@@ -555,6 +555,7 @@ border: 0px solid #e3e3e3;
 	padding:0px;
 	margin:0px;
 	text-align:center;
+	height: 40px;
 }
 
 .name {
